# ChangeLog for dev-java/avalon-logkit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/avalon-logkit/ChangeLog,v 1.84 2010/04/12 12:43:01 caster Exp $

  12 Apr 2010; Vlastimil Babka <caster@gentoo.org>
  -avalon-logkit-1.2-r2.ebuild, -avalon-logkit-2.1-r4.ebuild:
  Remove old

  12 Apr 2010; Alexis Ballier <aballier@gentoo.org>
  avalon-logkit-1.2.2.ebuild, avalon-logkit-2.1-r4.ebuild:
  keyword ~x86-fbsd, bug #313309

  05 Apr 2010; Vlastimil Babka <caster@gentoo.org>
  -avalon-logkit-1.2-r3.ebuild, -avalon-logkit-1.2-r4.ebuild,
  -avalon-logkit-2.1-r3.ebuild:
  Remove old.

  09 Feb 2010; Joseph Jezak <josejx@gentoo.org> avalon-logkit-1.2.2.ebuild:
  Marked ppc stable for bug #295940.

  09 Feb 2010; Joseph Jezak <josejx@gentoo.org> avalon-logkit-2.1-r4.ebuild:
  Marked ppc stable for bug #295939.

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  avalon-logkit-2.1-r4.ebuild:
  Transfer Prefix keywords

  14 Dec 2009; Brent Baude <ranger@gentoo.org> avalon-logkit-2.1-r4.ebuild:
  Marking avalon-logkit-2.1-r4 ppc64 for bug 295939

  14 Dec 2009; Brent Baude <ranger@gentoo.org> avalon-logkit-1.2.2.ebuild:
  Marking avalon-logkit-1.2.2 ppc64 for bug 295940

  09 Dec 2009; Markus Meier <maekke@gentoo.org> avalon-logkit-1.2.2.ebuild:
  amd64/x86 stable, bug #295940

  09 Dec 2009; Markus Meier <maekke@gentoo.org> avalon-logkit-2.1-r4.ebuild:
  amd64/x86 stable, bug #295939

  19 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  avalon-logkit-1.2-r4.ebuild:
  stable x86, bug 274642

  07 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  avalon-logkit-1.2.2.ebuild, avalon-logkit-2.1-r4.ebuild:
  Use java_prepare.

*avalon-logkit-2.1-r4 (06 Nov 2009)

  06 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -avalon-logkit-2.1-r2.ebuild, +avalon-logkit-2.1-r4.ebuild:
  Revbump with patch to allow compiling with java6.

*avalon-logkit-1.2.2 (06 Nov 2009)
