@@ -2,6 +2,6 @@ AUX avalon-logkit-1.2.2-java6.patch 590 RMD160 e36da2a8650c757d3f9ea631c1bf3bb79
 DIST avalon-logkit-2.1-src.tar.gz 60218 RMD160 03d42940610150390744a9e2bd546be4537a371e SHA1 a1fc2054d375461b6781fa9b5274298d0b158c7a SHA256 a5f158a52db9acd58648ffe75a023f43c5cbb94d027bb2beccf4983614d4e155
 DIST logkit-1.2.2-src.tar.gz 113180 RMD160 484c0860154f306d9773fba6a21c7d565d443d73 SHA1 45135c2f8345fb32fde0534e7bddcdeae0d3c435 SHA256 2c81edc87571fbd05797da7f65515e089c62cbb735bdbd10f93e29bd3aa3ddb8
 EBUILD avalon-logkit-1.2.2.ebuild 2751 RMD160 1b364d4e358eb0ff3c3a3f75d05d0d2ac3872d2a SHA1 030eeafefb3f60a8971eddb7cb948adda6657557 SHA256 118a0fb1350a6d3dfef55f09cb4cec1731129847c57747671ebe62304f9991f2
-EBUILD avalon-logkit-2.1-r1.ebuild 1453 RMD160 2dd8fa60690786b7b547ec59d7f641b7722546df SHA1 1fe2e6e790bc282a7fa5a5c8a932f240bff04aa8 SHA256 634a8806c3408b298ef632c066d22a45fdf5e799c4662919e3eb75fa71167df9
-MISC ChangeLog 11366 RMD160 88275e244ba057cf83d740298abe890442442c9a SHA1 4cea476e0eaa3bd8a893312af2be4fb316a3cb6a SHA256 2746f96a9489eb48f4ae8635db9f826289baefc16b5cd797fa3b7fe35e961a9a
+EBUILD avalon-logkit-2.1-r4.ebuild 1506 RMD160 8df2b84596563933731d8ae79e44f918eaa26ab4 SHA1 eb5ed2e06aaafcb7867db720173f333020e8d8fd SHA256 545783f5657ec1e4d1ac32bb0ff514e9cea8a948d631c4176e98cf5959b2e27b
+MISC ChangeLog 11540 RMD160 8660c399ea075b95e83b3d95daed78e91d0c16d1 SHA1 1e52e880a9da6ebf27f8a3319b0c1fb841a2e995 SHA256 aa8ff0f07bf9027f057f7038ecb5cf6b78feaf1c6959989042d1eb830c4b949c
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
