@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/avalon-logkit
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/avalon-logkit/ChangeLog,v 1.84 2010/04/12 12:43:01 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/avalon-logkit/ChangeLog,v 1.85 2010/04/13 08:22:50 caster Exp $
+
+  13 Apr 2010; Vlastimil Babka <caster@gentoo.org>
+  -avalon-logkit-2.1-r1.ebuild, +avalon-logkit-2.1-r4.ebuild:
+  Restore the correct version and really remove old. Sorry.
 
   12 Apr 2010; Vlastimil Babka <caster@gentoo.org>
   -avalon-logkit-1.2-r2.ebuild, -avalon-logkit-2.1-r4.ebuild:
